--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -23,7 +23,7 @@ body {
 }
 
 .RN__bar {
-  background: white;
+  background: blue;
   padding: 12px 20px;
   display: flex;
   align-items: center;
