--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -63,9 +63,10 @@ body {
 }
 
 .RN__left h1 {
-  font-size: 40px;
+  font-size: 50px;
   color: white;
   margin-bottom: 32px;
+  margin-top: 50px;
 }
 
 .RN__benefitsList {
@@ -100,6 +101,7 @@ body {
   font-size: 24px;
   color: white;
   text-align: center;
+  
 }
 
 .RN__card {
@@ -155,10 +157,10 @@ body {
 
   .RN__mobileTitle {
     display: block;
-    font-size: 36px;
+    font-size: 50px;
     color: #fff;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     padding: 0 20px;
     line-height: 1.2;
   }
@@ -210,3 +212,10 @@ footer small {
   color: white;
   opacity: 0.6;
 }
+
+@media (min-width: 768px) {
+  .RN__mobileTitle {
+    display: none;
+  }
+}
+
