--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -171,6 +171,7 @@ body {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 20px;
+  text-align: center;
 }
 
 .logo-carousel {
@@ -215,6 +216,11 @@ footer small {
 
 @media (min-width: 768px) {
   .RN__mobileTitle {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .RN__benefitsList--mobile {
     display: none;
   }
 }
