--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -141,6 +141,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 28px;
+    margin-top: 70px;
   }
 
   .RN__benefitsList--mobile li {
