--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -154,7 +154,7 @@ body {
     width: 28px;
     height: 28px;
     flex-shrink: 0;
-    stroke: white;
+    stroke: #acbbff;
   }
 
   .RN__mobileTitle {
