--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -20,9 +20,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background: 
-    linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-    url('https://b2b.occ.com.mx/assets/background-DJI9DYek.jpg');
+  background: linear-gradient(#9b68c938, #6930d9), url(https://b2b.occ.com.mx/assets/background-DJI9DYek.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
