--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -243,15 +243,15 @@ footer small {
     text-align: center;
     color: white;
   }
-
-  @media (max-width: 768px) {
-  .logos-section {
-  width: 90%;
-  margin: 0 auto;
-  padding: 0 20px;
-  text-align: center;
 }
 
+@media (max-width: 768px) {
+  .logos-section {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 20px;
+    text-align: center;
+  }
 
   .logo-track {
     gap: 32px;
@@ -263,3 +263,4 @@ footer small {
     height: auto;
   }
 }
+
