--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -36,6 +36,7 @@ body {
 .RN__bar {
   background: var(--blue);
   position: fixed;
+  width: 100%;
   top: 0;
   z-index: 1000;
   border-bottom: 1px solid #eee;
